Fix display of bin button, move overflow to collecton card description

--- a/src/card/styles.css
+++ b/src/card/styles.css
@@ -3,7 +3,6 @@
   position: relative;
   height: 100%;
   box-sizing: border-box;
-  overflow-y: hidden;
 }
 
 .wgsa-card--bordered {
@@ -145,4 +144,13 @@
 
 .wgsa-confirm-action button + button {
   margin-left: 24px;
+}
+
+.wgsa-card-description {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 80px;
+  overflow-y: hidden;
 }
